tweaks and updates

--- a/resume.html
+++ b/resume.html
@@ -30,10 +30,8 @@ layout: default
 
     <div id="contacts">
       <h2>Contacts</h2>
-      <p>twitter....</p>
-			<p>phone....</p>
-      <p>email...</p>
-			<p>etc...</p>
+      <p><a href="{{ site.twitter }}">Twitter<a/></p>
+      <p><a href="mailto:hire@codmajik.com">Email</a></p>
     </div>
   </div>
 </div>
